<resources>
    <string name="app_name">BusBump</string>

    <!-- Action Items -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh_all">Refresh all</string>
    <string name="action_inject_sample_data">Inject sample data</string>
    <string name="action_delete_local_data">Delete local data</string>

    <!-- Bus Info Creation Dialog -->
    <string name="bus_info_dialog_stop_no">Stop number</string>
    <string name="bus_info_dialog_message_enter">Please enter a 4-digit stop number</string>
    <string name="bus_info_dialog_message_error">Unable to fetch routes for given stop</string>
    <string name="bus_info_dialog_message_empty">No routes</string>
    <string name="bus_info_dialog_button_negative">Cancel</string>
    <string name="bus_info_dialog_button_positive">Save</string>

    <string name="dialog_bus_info_settings_route_no">Route Number: </string>
    <string name="dialog_bus_info_settings_direction_no">Direction ID: </string>

    <!-- Route Item -->
    <string name="route_item_description">99 Main</string>
    <string name="dialog_bus_info_name">name (optional)</string>
    <string name="menu_bus_info_color">Edit color</string>
    <string name="menu_bus_info_name">Edit name</string>
    <string name="menu_bus_info_delete">Delete</string>

    <!-- Bus Info Item -->
    <string name="item_bus_info_error_icon">Error</string>
    <string name="item_bus_info_name">Placeholder</string>
    <string name="item_bus_info_time_first">3:00</string>
    <string name="item_bus_info_time_second">3:15</string>
    <string name="item_bus_info_time_third">3:30</string>


</resources>
