<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.orchard.seg.busbump.activity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh_all"
        android:orderInCategory="100"
        android:title="@string/action_refresh_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_inject_sample_data"
        android:orderInCategory="100"
        android:title="@string/action_inject_sample_data"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_local_data"
        android:orderInCategory="100"
        android:title="@string/action_delete_local_data"
        app:showAsAction="never"/>
</menu>
